# FixModifiedUtf8ConvertError

./: README.md  build.gradle  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  main.cpp  main.h
app/src/main/java/com/example/bypass/test/: MainActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
lib/: build.gradle
lib/src/main/: AndroidManifest.xml
lib/src/main/cpp/: CMakeLists.txt  elf_util.cpp  elf_util.h  func_replace.cpp  func_replace.h  logger.h  main.cpp  utf.cpp  utf.h
lib/src/main/java/com/wind/utf8fixer/: Utf8Fixer.java
